Expand documentation for QObject Module APIs

Previously, it was unclear whether or not a QObject Module API property
could be the target of an alias property.  This commit makes it clear
that a QObject Module API property cannot be aliased as the import
qualifier of the Module API does not identify an object within the
same component of any item which may wish to alias the module API.

Task-Number: QTBUG-21420
Change-Id: Ia286edfee4dcf1250e883738f219f8aef67c32eb
Reviewed-on: http://codereview.qt-project.org/5057
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>